--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Download HLS videos directly from your browser"
+      content="download any movie and series streaming hls"
     />
-    <meta name="keywords" content="hls, downloader, video, download" />
-    <meta name="author" content="Tuhin Kanti Pal" />
+    <meta name="keywords" content="hls, download, video, download" />
+    <meta name="author" content="swaflix" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1e1e1e" />
     <link rel="icon" href="/favicon.ico" />
 
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@jeeetpaul" />
-    <meta name="twitter:title" content="HLS Downloader" />
+    <meta name="twitter:creator" content="@swaflix" />
+    <meta name="twitter:title" content="swaflix" />
     <meta
       name="twitter:description"
       content="Download HLS videos directly from your browser"
     />
     <meta
       name="twitter:image"
-      content="https://dynamic-image.vercel.app/api/generate/png/persian-blue.png?title=HLS%20Downloader&content=Download%20HLS%20videos%20directly%20from%20your%20browser&ref=website"
+      content="image.jpg"
     />
 
     <!-- Icons -->
@@ -53,9 +53,9 @@
     />
     <meta
       property="og:image"
-      content="https://dynamic-image.vercel.app/api/generate/png/persian-blue.png?title=HLS%20Downloader&content=Download%20HLS%20videos%20directly%20from%20your%20browser&ref=website"
+      content="image.jpg"
     />
-    <meta property="og:url" content="https://hlsdownloader.thetuhin.com/" />
+    <meta property="og:url" content="https://swaflix.xyz/" />
 
     <title>HLS Downloader</title>
   </head>
